pagebuilder/overlays/test-app/traefik/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-wild-composer
spec:
  tls:
    - hosts: 
      - "$(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).virtocomposer.com"
      secretName: $(VC_PLATFORM_SERVICE)-$(VC_NAMESPACE)-tls
    - hosts:   
      - "*.virtocomposer.com"
      secretName: wildcard-virtocomposer
  rules:
  - host: "*.virtocomposer.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).virtocomposer.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
